# riotng

./: ChangeLog  Makefile.am  README  README.ORIGINAL  configure.ac  libtm.pc.in
src/: Makefile.am  Makefile.in
src/dgl/: Makefile  data.cpp  data.h  degree.h  dglalg.cpp  dglalg.h  dvector.cpp  dvector.h  imatrix.cpp  imatrix.h  ivector.cpp  ivector.h  linsys.cpp  linsys.h  main.cpp  matinv.cpp  matinv.h  matrix.cpp  matrix.h  output.h  shrinkwrap.cpp  shrinkwrap.h  solution_plot.sh  stopwatch.h  timeid.h  vvtaylormodel.cpp  vvtaylormodel.h
src/dgl/awk/: auslesen.awk  plot1.awk  plot2.awk  plot3.awk  plot4.awk  plot5.awk  plot6.awk  plot7.awk  prepare_plot.awk  separate_column.awk  statistics.awk
src/tm-base/: Makefile  actions.h  adaptintval.cpp  adaptintval.h  degreeeval.h  error.h  factorialtable.cpp  factorialtable.h  hashfunc.h  hashtable.h  monom.cpp  monom.h  observer.h  polyeval.cpp  polyeval.h  primetable.cpp  primetable.h  refcounter.h  taylormodel.cpp  taylormodel.h  taylormodel_impl.cpp  taylormodel_impl.h  vardatatable.h  vartable.h
